--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
 }
 
 body {
-    background-color: blanchedalmond;
+    background-color: var(--light-homepage);
 }
 
 .header {
     background: transparent;
-    background-color: #ffd89e;
+    background-color: var(--light-header);
     position: fixed;
     top: 0px;
     left: 0px;
@@ -23,8 +23,32 @@ body {
     z-index: 100;
 }
 
+:root{
+    --light-header:  #ffd89e;
+    --light-homepage:  blanchedalmond;
+    --light-gallery:  rgb(255, 227, 192);;
+    --light-blog:  #ffdeab;
+    --light-contact:  #ffd390;
+    --light-font: black;
+    --light-link: blue;
+}
+
+.dark-theme {
+    --light-header:  #000;
+    --light-homepage:  #10002c;
+    --light-gallery:  rgb(0, 1, 37);;
+    --light-blog:  #060037;
+    --light-contact:  #070023;
+    --light-font: white;
+}
+
+.header #mode {
+    width: 25px;
+    cursor: pointer;
+}
+
 .MyProfile {
-    color: black(0, 0, 0);
+    color: var(--light-font);
     font-size: 25px;
     font-weight: 600;
 }
@@ -32,7 +56,7 @@ body {
 .navigation a{
     font-size: 16px;
     font-weight: 600;
-    color: rgb(0, 0, 0);
+    color: var(--light-font);
     text-decoration: none;
     padding-right: 100px;
     transition: .5s;
@@ -43,7 +67,7 @@ body {
 }
 
 .homepage {
-    color: black;
+    color: var(--light-font);
     height: 100vh;
     display: flex;
     align-items: center;
@@ -92,7 +116,7 @@ body {
 }
 
 .homepage-content h1 {
-    color: black;
+    color: var(--light-font);
     font-size: 40px;
     font-weight: 800;
 }
@@ -109,7 +133,7 @@ body {
 }
 
 .gallery {
-    background-color: rgb(255, 227, 192);
+    background-color: var(--light-gallery);
     height: 100vh;
     width: 100%;
     padding: 20px 10%;
@@ -117,6 +141,7 @@ body {
 
 .gallery h1 {
     font-size: 40px;
+    color: var(--light-font);
     font-weight: 600;
     text-align: center;
     margin-top: 5%;
@@ -133,7 +158,7 @@ body {
 }
 
 .blog {
-    background-color: rgb(255, 223, 174);
+    background-color: var(--light-blog);
     display: flex;
     flex-flow: column ;
     align-items: center;
@@ -145,6 +170,7 @@ body {
 .blog-content h1 {
     font-size: 40px;
     font-weight: 600;
+    color: var(--light-font);
     text-align: center;
     margin-top: 5%;
 }
@@ -157,11 +183,12 @@ body {
     justify-content: center;
     border: 2px solid;
     margin: 25px;
+    color: var(--light-font);
 }
 
 .blog-content .div-inside a {
     text-decoration: none;
-    color: blue;
+    color: var(--light-link);
 }
 
 .blog-content article {
@@ -178,7 +205,7 @@ body {
 }
 
 .contact {
-    background-color: #ffd390;
+    background-color: var(--light-contact);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -197,6 +224,7 @@ body {
 .contact-content h1 {
     font-size: 30px;
     font-weight: 600;
+    color: var(--light-font);
     text-align: center;
     margin-left: 210px;
     margin-bottom: 20px;
@@ -213,7 +241,7 @@ body {
     border: 2px solid black;
     border-radius: 25%;
     font-size: 20px;
-    color: black;
+    color: var(--light-font);
     text-decoration: none;
     margin-left: 200px;
     margin-bottom: 20px;
